k3s/shi-kara-jinsei-ga-kuru/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shi-kara-jinsei-ga-kuru
  namespace: shi-kara-jinsei-ga-kuru
spec:
  selector:
    app: shi-kara-jinsei-ga-kuru
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
